syntax = "proto3";

package IT.WebServices.Fragments.Content;

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

// Content record data
message ContentRecord {
  ContentPublicRecord Public = 1 [(buf.validate.field).required = true];
  ContentPrivateRecord Private = 2 [(buf.validate.field).required = true];
}

message ContentPublicRecord {
  string ContentID = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.uuid = true
  ];   // Guid for the content record
  google.protobuf.Timestamp CreatedOnUTC = 2 [(buf.validate.field).required = true];  // UTC timestamp when content was created
  google.protobuf.Timestamp ModifiedOnUTC = 3; // UTC timestamp when content record was last modified
  google.protobuf.Timestamp PublishOnUTC = 4;  // UTC timestamp when content was or will be published
  google.protobuf.Timestamp AnnounceOnUTC = 7;  // UTC timestamp when content was or will be announced
  google.protobuf.Timestamp PinnedOnUTC = 5;   // UTC timestamp when content was pinned
  google.protobuf.Timestamp DeletedOnUTC = 6;   // UTC timestamp when content was deleted

  ContentPublicData Data = 21 [(buf.validate.field).required = true];
}

message ContentPrivateRecord {
  string CreatedBy = 2 [(buf.validate.field).string.uuid = true];
  string ModifiedBy = 3 [(buf.validate.field).string.uuid = true];
  string PublishedBy = 4 [(buf.validate.field).string.uuid = true];
  string AnnouncedBy = 7 [(buf.validate.field).string.uuid = true];
  string PinnedBy = 5 [(buf.validate.field).string.uuid = true];
  string DeletedBy = 6 [(buf.validate.field).string.uuid = true];

  ContentPrivateData Data = 21 [(buf.validate.field).required = true];
}

message ContentPublicData {
  string Title = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 200
  ];
  string Description = 2 [
    (buf.validate.field).string.max_len = 500
  ];
  string Author = 3 [(buf.validate.field).string.max_len = 100];
  string AuthorID = 13 [(buf.validate.field).string.uuid = true];
  string URL = 4 [(buf.validate.field).string.uri = true];
  string FeaturedImageAssetID = 6 [(buf.validate.field).string.uuid = true];
  uint32 SubscriptionLevel = 7 [(buf.validate.field).uint32.gte = 0];
  repeated string CategoryIds = 8 [
    (buf.validate.field).repeated.items.string.uuid = true
  ];
  repeated string ChannelIds = 9 [
    (buf.validate.field).repeated.items.string.uuid = true
  ];
  repeated string Tags = 10 [
    (buf.validate.field).repeated.max_items = 25,
    (buf.validate.field).repeated.items.string.min_len = 1,
    (buf.validate.field).repeated.items.string.max_len = 50
  ];

  oneof ContentData_oneof {
    AudioContentPublicData Audio = 20;
    PictureContentPublicData Picture = 21;
    VideoContentPublicData Video = 22;
    WrittenContentPublicData Written = 23;
  }
}

message ContentPrivateData {
  oneof ContentData_oneof {
    AudioContentPrivateData Audio = 20;
    PictureContentPrivateData Picture = 21;
    VideoContentPrivateData Video = 22;
    WrittenContentPrivateData Written = 23;
  }

  string OldContentID = 51 [(buf.validate.field).string.uuid = true];
}

message AudioContentPublicData {
  string HtmlBody = 1 [(buf.validate.field).string.min_len = 1];
  string AudioAssetID = 2 [(buf.validate.field).string.uuid = true];
}
message AudioContentPrivateData {
}

message PictureContentPublicData {
  string HtmlBody = 1;
  repeated string ImageAssetIDs = 2 [
    (buf.validate.field).repeated.items.string.uuid = true
  ];
}
message PictureContentPrivateData {
}

message VideoContentPublicData {
  string HtmlBody = 1;
  bool IsLiveStream = 2;
  bool IsLive = 3;
  string RumbleVideoId = 11 [(buf.validate.field).string.max_len = 100];
  string YoutubeVideoId = 12 [(buf.validate.field).string.max_len = 100];
}
message VideoContentPrivateData {
}

message WrittenContentPublicData {
  string HtmlBody = 1 [(buf.validate.field).required = true, (buf.validate.field).string.min_len = 1];
}
message WrittenContentPrivateData {
}
